--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-loader-spinner": "^6.1.6",
     "react-masonry-css": "^1.0.16",
     "react-player": "^2.14.1",
     "react-scroll-parallax": "^3.4.5",
