--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.334.0",
     "next": "14.0.4",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^6.1.6",
@@ -37,6 +38,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "recharts": "^2.12.4",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
