--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.334.0",
     "next": "14.0.4",
     "react": "^18",
+    "react-animated-numbers": "^0.18.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
@@ -27,7 +28,6 @@
     "react-masonry-css": "^1.0.16",
     "react-player": "^2.14.1",
     "react-scroll-parallax": "^3.4.5",
-    "react-spring": "^9.7.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
